--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,3 +1,126 @@
-header{
-    text-align: center;
+/* header style */
+header {
+    margin-top: 5px;
+    margin-left: 20px;
+    color: darkblue;
 }
+
+/* give image background for page */
+body {
+    background-image: url("../images/admin.jpg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#hint_table{
+    margin-top: 30px;
+    margin-left: 20px;
+    width: max-content;
+    text-align: center;
+    font-style: italic;
+    color: darkblue;
+}
+
+/* registration and login overall layout style */
+.flex_layout {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+}
+
+
+/*
+.parent {
+    display: flex;
+}
+
+#full-name{
+    background: lightblue;
+    flex: 0.6;
+    display: block;
+    font-size: 22px;
+    color: darkblue;
+    font-weight:bold;
+    text-align: left;
+    padding-left: 20px;
+}
+
+.close-logout{
+    background: #A3C9E7;
+    flex: 0.2;
+    height: 20px;
+    font-size: 15px;
+    padding-top:5px;
+    text-align: center;
+    border: 1.5px solid #96b9d7;
+    border-radius: 4px;
+}
+
+
+
+/* registration and login overall layout style */
+/*.flex_layout {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    margin-left: 20px;
+}
+
+
+
+
+#hint_table{
+    margin-top: 30px;
+    margin-left: 20px;
+    width: 390px;
+    text-align: center;
+    font-style: italic;
+    color: darkblue;
+}
+
+#table1{
+    background: red;
+}
+#parent-fields{
+    display: flex;
+    position: fixed;
+    margin-left: 20px;
+}
+
+.table_fields{
+    background: #A3C9E7;
+    width: 194px;
+    height: 20px;
+    font-size: 17px;
+    padding-bottom:20px;
+    text-align: center;
+    border: 1.5px solid #96b9d7;
+    border-radius: 4px;
+    font-weight:bold;
+}
+
+#parent-data{
+    padding-top: 45px;
+}
+
+.table_data{
+    height: 10px;
+    width: 193px;
+    text-align: center;
+    border: 1px solid #96b9d7;
+}
+
+#scroll {
+    margin-left: 20px;
+    height: 490px;
+    width: 450px;
+    overflow: auto;
+    background-color: #f5f5f5;
+    color: black;
+    scrollbar-base-color: #96b9d7;
+
+    border: 1.5px solid #96b9d7;
+    border-radius: 4px;
+}*/
