--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -7,6 +7,8 @@ header {
 
 /* give image background for page */
 body {
+    padding: 0;
+    margin: 0;
     background-image: url("../images/main.jpg");
     height: 100%;
     background-position: center;
