--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link type="text/css" href="css/index.css" rel="stylesheet">
+    <link type="text/css" href="/css/index.css" rel="stylesheet">
     <link rel="icon" type="image/jpg" href="/images/favicon.jpg">
 </head>
 
