--- a/src/main/resources/templates/user-page.html
+++ b/src/main/resources/templates/user-page.html
@@ -7,27 +7,30 @@
     <link rel="icon" type="image/jpg" href="/images/favicon.jpg">
 </head>
 <body>
-    <div id="user">
-        <div class="parent">
-            <div id="full-name">
-                <p th:text="'Hi '+${currentUser.getName()}+' '+${currentUser.getSurname()}"></p>
-            </div>
-            <div class="close-logout">
-                <a th:if="${isLoggedIn}" href="/closeprofile">Close profile</a>
-            </div>
-            <div class="close-logout">
-                <a th:if="${isLoggedIn}" href="/logout">Log out</a>
-            </div>
+<div id="user">
+    <div class="parent">
+        <div id="full-name">
+            <p th:text="'Hi '+${currentUser.getName()}+' '+${currentUser.getSurname()}"></p>
         </div>
-        <h3 id="hint_table">Your login history</h3>
-        <div id="parent2">
-            <div class="table_fields">
-                <p>Login date </p>
-            </div>
-            <div class="table_fields">
-                <p>IP address</p>
-            </div>
+        <div class="close-logout">
+            <form th:if="${isLoggedIn}" action="/user/delete" method="post">
+                <button type="submit">Close profile</button>
+            </form>
+            <!--<a th:if="${isLoggedIn}" href="/user/delete">Close profile</a>-->
         </div>
+        <div class="close-logout">
+            <a th:if="${isLoggedIn}" href="/logout">Log out</a>
+        </div>
+    </div>
+    <h3 id="hint_table">Your login history</h3>
+    <div id="parent2">
+        <div class="table_fields">
+            <p>Login date </p>
+        </div>
+        <div class="table_fields">
+            <p>IP address</p>
+        </div>
+    </div>
 
     <div id="scroll" class="table">
         <table>
