changes style, activate account

--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -7,6 +7,7 @@ header {
 
 /* give image background for page */
 body {
+    margin-left: 20px;
     background-image: url("../images/admin.jpg");
     height: 100%;
     background-position: center;
